done footer > tablet (PP, overflow) - fixed

--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
 }
 
-.footer--wrapper {
+/*.footer--wrapper {
   @media (min-width: $desktop-width) {
     padding: 0 13.2%;
     box-sizing: border-box;
@@ -14,21 +14,20 @@
   }
 
   @media (max-width: $mobile-width-only) {
-    /*
+    !*
     padding: 0 5%;
-    */
+    *!
   }
-}
+}*/
 
 .footer__main-block {
   display: flex;
   justify-content: space-between;
 
   @media (min-width: $desktop-width) {
-    display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    justify-content: space-between;
+    padding: 40px 0;
   }
 
   @media (max-width: $tablet-width-only) {
@@ -38,30 +37,37 @@
 
 .footer__socials {
   display: flex;
+  position: relative;
   flex-direction: column;
   justify-content: space-between;
   height: 160px;
-  padding: 65px 0 40px;
-  margin-right: 25px;
+
+  @media (min-width: $desktop-width) {
+    padding: 0 30px 0 13.2%;
+  }
 
   @media (max-width: $tablet-width-only) {
     flex-direction: row;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     align-items: center;
+    height: 96px;
     margin: 0;
-    padding: 10px 0 0 0;
-    height: 100%;
+    padding: 0 3.3%;
 
     &::after {
-      position: absolute;
-      left: 0;
-      bottom: 191px;
       content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
       width: 100%;
       height: 1px;
       background-color: #626962;
       opacity: 0.2;
     }
+  }
+
+  @media (max-width: $mobile-width-only) {
+    //padding: 0 5%;
   }
 }
 
@@ -69,13 +75,13 @@
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  padding: 65px 0 40px;
+  padding: 0 13.2% 0 0;
   max-width: 995px;
   justify-content: space-between;
 
   @media (max-width: $tablet-width-only) {
     justify-content: space-around;
-    padding: 52px 0 36px;
+    padding: 40px 0 36px;
   }
 }
 
@@ -106,13 +112,26 @@
 
 .footer__rights {
   display: flex;
+  flex-wrap: nowrap;
   flex-direction: row;
   justify-content: space-between;
 
+  @media (min-width: $desktop-width) {
+    padding: 0 13.2%;
+  }
+
+  @media (max-width: $tablet-width-only) {
+    padding: 0 3.3%;
+  }
+
+  @media (max-width: $mobile-width-only) {
+    //padding: 0 5%;
+  }
+
   &::before {
+    content: "";
     position: absolute;
     left: 0;
-    content: "";
     width: 100%;
     height: 1px;
     background-color: #626962;
