--- a/source/sass/scaffolding.scss
+++ b/source/sass/scaffolding.scss
@@ -35,6 +35,7 @@ button {
   width: -1px;
   height: 1px;
   margin: -1px;
+  font-size: 0;
 }
 
 .wrapper {
